add 6.29